--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,3 +36,10 @@ header {
 }
 
 /* Main Section */
+main {
+    background-color: white;
+    border: 1px solid red;
+    margin: 40px 200px 5px 200px;
+    height: 200px;
+    border-radius: 8px;
+}
