--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,10 +49,18 @@ header {
 /* Main Section */
 main {
     background-color: white;
-    border: 1px solid red;
-    margin: 40px 200px 5px 200px;
-    height: 200px;
+    /* border: 1px solid red; */
+    margin: 40px 160px 5px 160px;
     border-radius: 8px;
+}
+
+.functional-buttons {
+    border: ;
+    padding: 
+} 
+
+.list-row {
+    padding: ;
 }
 
 /* To do list Section */
@@ -64,5 +72,26 @@ li {
 /* Tags Defining Section */
 
 .check-visual {
-    
+    display: inline-block;
+    font-size: 0.7em;
+    font-weight: 900;
+    text-align: center;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+.check {
+    color: limegreen;
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    border: 1px solid limegreen;
+}
+
+.cross {
+    color: red;
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    border: 1px solid red;
 }
