defined nad fixed style for main section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,13 +51,13 @@ main {
     background-color: white;
     /* border: 1px solid red; */
     margin: 40px 160px 5px 160px;
-    padding: 0 40px 0 40px;
+    /* padding: 0 40px 0 40px; */
     border-radius: 8px;
 }
 
-.functional-buttons {
-    border: 1px solid red;
-    padding: 10px 0 10px 0 
+.functional-buttons-section {
+    padding: 15px 40px 10px 40px;
+    border-bottom: 3px solid rgb(245, 237, 237);
 } 
 
 button {
@@ -85,12 +85,17 @@ button {
 li {
    list-style-type: none;
    font-weight: 400;
-   padding: 10px 0 10px 0;
+   padding: 10px 40px 10px 40px;
 }
 
 .list-row {
     border: 1px solid red;
     margin-top: 16px;
+}
+
+.list-title {
+    color: rgb(62, 61, 61);
+    padding: 0px 40px 0px 40px;
 }
 
 /* Tags Defining Section */
