--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,3 +133,15 @@ li {
 }
 
 /* Tags Defining Section */
+.tag-visual {
+    display: inline-block;
+    font-size: 0.7em;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    color: red;
+    border: 1px solid red;
+    padding: 3px 8px;
+    border-radius: 9px;
+}
+
