--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,9 +139,32 @@ li {
     font-weight: 500;
     text-align: center;
     vertical-align: middle;
-    color: red;
-    border: 1px solid red;
-    padding: 3px 8px;
-    border-radius: 9px;
+    color: white;
+    padding: 5px 11px;
+    border-radius: 10px;
+    margin-left: 6px;
 }
 
+.tag-editorial {
+    background-color: var(--tag-editorial);
+}
+
+.tag-goals{
+    background-color: var(--tag-qone-goals);
+}
+
+.tag-recruiting {
+    background-color: var(--tag-recruiting);
+}
+
+.tag-mobile {
+    background-color: var(--tag-mobile);
+}
+
+.tag-website {
+    background-color: var(--tag-website);
+}
+
+.tag-sales {
+    background-color: var(--tag-sales);
+}
